lib/src/compiler/tests/testdata/errors/41.out
error[E014]: invalid regular expression
 --> line:3:12
  |
3 |     $a = /a[]b/
  |            ^^ unclosed character class
  |